--- a/css/common.css
+++ b/css/common.css
@@ -13,21 +13,22 @@ header {
     background-color: #fafafa;
 }
 
-.head {
-
-}
+.head {}
 
 /*최상단 서비스 바  - 로그인 앱설치등 있음*/
+
 .main-service {
     width: 980px;
     margin: auto;
-	
+
 }
 
 .main-service-left {
     height: 30px;
 }
+
 /*--왼쪽*/
+
 .main-service-left {
     float: left;
 }
@@ -36,7 +37,9 @@ header {
     float: left;
     display: block;
 }
+
 /*--오른쪽*/
+
 .main-service-right {
     float: right;
 }
@@ -49,16 +52,17 @@ header {
     font-weight: bold;
     padding-right: 10px;
     padding-left: 10px;
-    
+
 }
 
 .main-service-right li:nth-of-type(1) {
-	border-right: none;
+    border-right: none;
 }
 
 /*>>메인 네비 게이션<<*/
+
 .main-nav-outer {
-	background-image:url("../img/bg_header.gif");
+    background-image: url("../img/bg_header.gif");
     background-repeat: repeat-x;
 }
 
@@ -68,50 +72,185 @@ header {
     margin: auto;
     display: flex;
 }
+
 /*--CGV로고*/
-.main-nav h1 img{
+
+.main-nav h1 img {
     flex-grow: 1;
-    padding: 35px; 
+    padding: 35px;
     height: 50px;
 }
+
 /*--메인 네비게이션 */
+
 .main-nav-mid {
-	flex-grow: 3;
+    flex-grow: 3;
     text-align: center;
 }
+
 .main-nav-mid img {
-	padding-top: 29px;
+    padding-top: 29px;
 }
 
-.main-nav-mid li ul{
+.main-nav-mid li ul {
     margin: -5px;
     display: flex;
 }
 
 .main-nav-mid li li {
-	flex-grow: 1;
+    flex-grow: 1;
 }
 
-.main-nav-mid a{
+.main-nav-mid a {
     font-weight: bold;
     font-size: 20px;
-	color: black;
+    color: black;
 }
+
 /*--CGV 영화 검색*/
+
 .main-nav-right {
     padding-top: 65px;
 }
 
 
 /*>>이미지<<*/
-.header-banner{
+
+.header-banner {
     width: 980px;
-	margin: auto;
+    margin: auto;
 }
 
 
+/*------------- content 부분--------------------*/
+
+.slider {
+    background-image: url(../img/bg_c_bricks.png)
+}
+
+/*>>MOVIE SELECTION<<*/
+
+.movie-selection {
+    margin: auto;
+    width: 980px;
+}
+
+.movie-selection h3 {
+    background: url(../img/bg_h3_line.jpg) repeat-x 0 50%;
+    text-align: center;
+    margin: 30px 0 15px;
+    height: 41px;
+    line-height: 41px;
+
+}
+
+.cons-movie {
+    width: 980px;
+    margin: auto
+}
+
+/*>>EVENT<<*/
+
+.event {
+    width: 980px;
+    margin: auto;
+}
+
+.event>h3 {
+    background: url(../img/bg_h3_line.jpg) repeat-x 0 50%;
+    text-align: center;
+    margin: 30px 0 15px;
+    height: 41px;
+    line-height: 41px;
+
+}
+
+/*>>탭메뉴<<*/
+
+.tab-menu {
+    width: 980px;
+    margin: auto;
+}
+
+.tab-menu > ul {
+    width: 574px;
+    display: flex;
+    margin: auto;
+}
+
+.tab-menu > ul > li:first-child {
+    padding-left: 21.7px;
+    background: url(../img/sprite_corner.png) 0 -20px no-repeat;
+    overflow: hidden;
+}
+
+.tab-menu > ul > li:last-child {
+    padding-left: 21.1px;
+    background: url(../img/ribon_right.png) right 0 no-repeat;
+    overflow: hidden;
+}
+
+.tab-menu > ul > li {
+    height: 39px;
+    background-color: #e71a0f;
+    margin: -1px;
+}
+
+.tab-menu > ul > li > a {
+    display: inline-block;
+    height: 20px;
+    font-weight: bold;
+    color: white;
+    border-right: 3px solid white;
+    margin: 10px 0 5px;
+    padding: 0 15px;
+}
+
+.tab-menu > ul > li:nth-child(6) > a {
+    border: none;
+}
+
+.sect-event ul {
+    display: flex;
+    margin-top: 20px;
+    padding-bottom: 30px;
+    border-bottom: 3px solid #241d1e;
+    margin-bottom: 20px;
+}
+
+.sect-event ul li {
+    margin: 0 3px;
+}
+
+.cols-banner {
+    display: flex;
+}
+
+.cols-banner>div {
+    margin: 0 7px;
+}
+
+/*>>notice<<*/
 
 /*나중에 스마트폰*/
+.notice-outer {
+	display: flex;
+    height: 20px;
+    width: 980px;
+    overflow: hidden;
+    border-bottom: 3px solid #222222;
+}
+.notice {
+    border: 1px solid #e0e0e0;
+    height: 20px;
+    width: 870px;
+    padding-top: 5px;
+}
+.notice-outer h3{
+    height: 20px;
+    margin-right: 15px;
+}
+
 
 @media (max-width:500px) {
     h1 {
