--- a/css/common.css
+++ b/css/common.css
@@ -156,7 +156,7 @@ header {
     margin: auto;
 }
 
-.event>h3 {
+.event > h3 {
     background: url(../img/bg_h3_line.jpg) repeat-x 0 50%;
     text-align: center;
     margin: 30px 0 15px;
@@ -226,37 +226,229 @@ header {
     display: flex;
 }
 
-.cols-banner>div {
+.cols-banner > div {
     margin: 0 7px;
 }
 
 /*>>notice<<*/
 
 /*나중에 스마트폰*/
+
 .notice-outer-outer {
     padding-bottom: 10px;
     border-bottom: 3px solid #222222;
-	
+
 }
+
 .notice-outer {
-	display: flex;
+    display: flex;
     height: 21px;
     width: 980px;
     overflow: hidden;
 }
+
 .notice {
     height: 20px;
     width: 865px;
     padding-top: 5px;
 }
-.notice-outer h3{
+
+.notice-outer h3 {
     height: 20px;
     width: 120px;
     margin-right: 15px;
 }
+
 /*------------------------------footer 부분---------------------*/
 
+/*특수 상영관 종류*/
 
+.sect-smuse {
+    margin-top: -4px;
+    height: 66px;
+    border-top: 1px #949494 solid;
+    border-bottom: 1px #949494 solid;
+}
+
+.sect-smuse ul {
+    width: 980px;
+    height: inherit;
+    margin: auto;
+    display: flex;
+}
+
+.sect-smuse li {
+    flex: 1;
+    padding: 10px 0;
+}
+
+.sect-smuse li > a {
+    display: block;
+    height: 44px;
+    background-repeat: no-repeat;
+    text-indent: 100%;
+    text-decoration: none;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.dx {
+    width: 49px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: 0 -768px;
+}
+
+.imax {
+    width: 59px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -74px -768px;
+}
+
+.screenx {
+    width: 88px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -159px -768px;
+}
+
+.spherex {
+    width: 76px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -273px -768px;
+}
+
+.soundx {
+    width: 72px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -379px -768px;
+}
+
+.tempur-cinema {
+    width: 55px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -480px -768px;
+}
+
+.gold-class {
+    width: 84px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -567px -768px;
+}
+
+.cine-de-chef {
+    width: 89px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -679px -768px;
+}
+
+.private-cinema {
+    width: 86px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: 0 -826px;
+}
+
+.cinekids {
+    width: 70px;
+    background: url(../img/common_sprite_area_v4_2016.png);
+    background-position: -113px -826px;
+}
+
+/*회사 소개*/
+
+.policy ul {
+    width: 980px;
+    margin: auto;
+    display: flex;
+    font-family: 'NanumBarunGothicBold', '맑은 고딕', '돋움', Dotum, sans-serif;
+    text-decoration: none;
+    vertical-align: middle;
+    font-weight: bold;
+    font-size: 12px;
+    padding-top: 28px;
+}
+
+.policy li {
+    border-right: 1px solid #949494;
+}
+
+.policy li:last-child {
+    border: none;
+}
+
+.policy li a {
+    display: block;
+    color: #444444;
+    padding: 0 10px;
+    letter-spacing: -1px;
+}
+
+/*회사 소개 및 정보*/
+.com-cinfo {
+	display: flex;
+    padding-top: 20px;
+    width: 980px;
+    margin: auto;
+}
+.logo {
+    width: 90px;
+    height:43px;
+    margin-right: 20px;
+    background-image: url(../img/common_sprite_area_v4_2016.png);
+    background-repeat: no-repeat;
+    background-position: -145px -319px;
+}
+.address {
+    font-family: 'NanumBarunGothic', '맑은 고딕', '돋움', Dotum, sans-serif;
+	font-size: 12px;
+    color: #555555;
+    line-height: 1.6em;
+}
+
+.share-outer{
+    height: 50px;
+    display: inline-block;
+    margin-left: 5px; 
+}
+
+.share a{
+    display: inline-block;
+	width: 34px;
+    height: 34px;
+    margin-left: 2px;
+}
+.facebook {
+    background-image: url(../img/common_sprite_area_v4_2016.png);
+    background-repeat: no-repeat;
+    background-position: -509px -429px;
+}
+.twitter {
+	background-image: url(../img/common_sprite_area_v4_2016.png);
+    background-repeat: no-repeat;
+    background-position: -551px -429px;
+}
+.instagram {
+	background-image: url(../img/common_sprite_area_v4_2016.png);
+    background-repeat: no-repeat;
+    background-position:-593px -429px;
+}
+.share form{
+	display: inline-block;
+}
+.share select{
+    height: 34px;
+
+}
+.copyright {
+	font-family: 'NanumBarunGothic', '맑은 고딕', '돋움', Dotum, sans-serif;
+	font-size: 12px;
+    color: #555555;
+}
+.footer-bottom {
+    display: inline-block;
+	background-image: url(../img/bg_footer_com.gif);
+    height: 147px;
+    width: 100%;
+    background-position: 0 -134px;
+}
 @media (max-width:500px) {
     h1 {
         display: none;
